# silo

./: README.md  project_ideas.md
project_01/: README.md  pyproject.toml  quotes.json
project_01/project_01/: quotes.json-BU1
project_01/tests/: test_project_01.py
templates/: python.py
